--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "22.10.10",
     "@types/react": "19.0.8",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
